--- a/src/index.css
+++ b/src/index.css
@@ -232,4 +232,6 @@ body:after {
   bottom: 0;
   pointer-events: none;
   background: linear-gradient(160deg, #aa40f0, #ffa0c0);
+  z-index: 10000;
+  mix-blend-mode; screen;
 }
