--- a/src/index.css
+++ b/src/index.css
@@ -139,6 +139,7 @@
   @apply absolute top-0 flex flex-col items-center cursor-pointer;
   z-index: 20;
   transition: transform 0.2s ease;
+  height: 2em
 }
 
 .timeline-marker-item:hover {
